microk8s/staging/kubeinvaders/kubeinvaders-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kubeinvaders
  namespace: kubeinvaders
spec:
  type: ClusterIP
  selector:
    app: kubeinvaders
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: web
